fix(dashboard): corrigidos serviços e métodos para agregações (CulturaService, VendaProducaoService, DashboardService)